# coder-stats

./: README.md  pyproject.toml
src/app/: main.py
src/app/api/: router.py
src/app/api/core/: enums.py  service.py  types.py
src/app/api/core/constants/: enums.py
src/app/api/core/models/: list_model.py  model_list.py  responses.py
src/app/api/core/query_params/: enums.py
src/app/api/core/query_params/constants/: enums.py
src/app/api/core/query_params/models/: __init__.py  base_query_params.py  languages_query_params.py  piechart_query_params.py  text_query_params.py
src/app/api/core/query_params/models/mixins/: __init__.py  limit.py  sort_order.py
src/app/api/core/services/: base_service.py  datavis_service.py  get_service.py  git_service.py
src/app/api/core/services/constants/: enums.py
src/app/api/core/services/factories/: get_service.py
src/app/api/core/theme/constants/: enums.py
src/app/api/core/theme/models/: template.py
src/app/api/v1/: router.py
src/app/api/v1/codeberg/: enums.py  routes.py  service.py
src/app/api/v1/codeberg/constants/: enums.py
src/app/api/v1/codeberg/models/: repository.py  responses.py  team.py  user.py
src/app/api/v1/github/: routes.py  service.py
src/app/api/v1/github/constants/: enums.py
src/app/api/v1/github/models/: repository.py  responses.py  user.py
src/app/api/v1/query_params/models/: __init__.py  languages_query_params.py
src/app/api/v1/shared/: client.py  service.py
src/tests/: conftest.py
src/tests/factories/: codeberg_factory.py  github_factory.py
(+6 files in other folders)
