[project]
name = "coder-stats"
version = "0.1.0"
description = "Stats for Codeberg and GitHub"
authors = [
    { name = "Sanngriðr", email = "sanngridhr@yamadachi.quest" }
]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{ include = "app", from = "src" }]


[tool.ruff]
exclude = ["migrations"]

indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [ "B", "E", "F", "I", "N", "Q" ]